<resources>
    <string name="app_name">MovieTicket</string>

    // On Boarding
    <string name="button_lanjutkan">LANJUTKAN</string>
    <string name="button_lewati">LEWATI PERKENALAN</string>
    <string name="button_mulai">MULAI</string>
    <string name="title_one">Now Playing</string>
    <string name="subtitle_one">Lebih mudah untuk mengetahui film yang sedang tayang</string>
    <string name="title_two">Pre Sale</string>
    <string name="subtitle_two">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="title_three">Cashless</string>
    <string name="subtitle_three">Gunakan e-wallet untuk transaksi tiket nonton</string>

    // Sign In
    <string name="sign_in_title">Sign In</string>
    <string name="title_username">Username</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="title_password">Password</string>
    <string name="button_masuk">MASUK</string>
    <string name="button_daftar">DAFTAR AKUN BARU</string>

    // Sign Up
    <string name="sign_up_title">Sign Up</string>
    <string name="input_nama">Nama</string>
    <string name="input_email">Email</string>
    <string name="title_foto">Foto</string>
    <string name="title_greeting">Halo,\n%s</string>
    <string name="button_upload">UPLOAD NANTI</string>
    <string name="button_save">SIMPAN &amp; LANJUTKAN</string>

    // Home Screen
    <string name="username_dummy">Wahyu Kharisma</string>
    <string name="wallet_dummy">IDR 200.000</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_coming_soon">Coming Soon</string>

    // Detail Screen
    <string name="title_film_dummy">Avengers: End Game</string>
    <string name="title_film_dummy_2">Spider-Man: Into the Spider-Verse</string>
    <string name="tag_film_dummy">Action, Sci-fi</string>
    <string name="rating_film_dummy">8,0</string>
    <string name="title_storyboard">Storyboard</string>
    <string name="storyboard_dummy">After Thanos, an intergalactic warlord, disintegrates half of the universe, the Avengers must reunite and assemble again to reinvigorate their trounced allies and restore balance.</string>
    <string name="title_who_played">Cast</string>
    <string name="button_chair">BOOK NOW</string>

    // Select Chair
    <string name="title_select_chair">Pilih Kursi</string>
    <string name="title_screen">Layar Bioskop</string>
    <string name="title_booked">Booked</string>
    <string name="title_empty">Tersedia</string>
    <string name="title_selected">Terpilih</string>
    <string name="button_buy">BELI TIKET (%d)</string>

    // Checkout Activity
    <string name="title_checkout">Checkout</string>
    <string name="title_date">Waktu &amp; Tanggal</string>
    <string name="title_balance">Saldo saya</string>
    <string name="title_wallet">E-Dompet</string>
    <string name="title_cinema">Cinema</string>
    <string name="title_total">Total Harus Dibayar</string>
    <string name="title_placeTime">Waktu &amp; Tempat</string>
    <string name="dummy_time">05 Desember 2020</string>
    <string name="dummy_cinema">Central Park Mall, Cinema 1</string>
    <string name="title_kursi">Tempat Duduk</string>
    <string name="dummy_total">Rp. 140.000</string>
    <string name="button_pay">BAYAR SEKARANG</string>
    <string name="button_cancel">BATALKAN</string>

    // Fragment Home
    <string name="dummy_title_film">Sonic</string>
    <string name="dummy_rate_film">8.0</string>
    <string name="dummy_tag_film">Family, Sci-fi</string>
    <string name="dummy_description">Alita, a battle cyborg, is revived by Ido, a doctor, the great battle</string>

    // Success Transaction
    <string name="title_success">Selamat Menonton!</string>
    <string name="desc_success">Tiket telah berhasil dibeli, selamat menikmati film kesukaan anda</string>
    <string name="btn_show_tiket">LIHAT TIKET</string>
    <string name="btn_home">BERANDA</string>


    // Fragment Ticket
    <string name="ticket_title">Today</string>
    <string name="dummy_movie">3 Movies</string>
    <string name="count_movies">%d Movies</string>

    // Ticket Print
    <string name="qr_title">Quick Print</string>
    <string name="qr_subtitle">Scan QR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Setting
    <string name="setting_title">Setting</string>
    <string name="setting_sub_title">Keep it up to date</string>
    <string name="setting_wallet">Dompet Saya</string>
    <string name="setting_profile">Ubah Profil</string>
    <string name="setting_language">Ganti Bahasa</string>
    <string name="setting_help">Bantuan</string>

</resources>