<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_titleFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_header"
        android:text="@string/title_film_dummy"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_semi_bold"
        android:textColor="@color/black_text"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleFilm"
        android:text="@string/tag_film_dummy"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_light"
        android:textColor="@color/black_text"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_header"
        android:text="@string/rating_film_dummy"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_semi_bold"
        android:textColor="@color/black_text"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/tv_titleStoryBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tag"
        android:text="@string/title_storyboard"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_semi_bold"
        android:textColor="@color/black_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_contentStoryBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleStoryBoard"
        android:text="@string/storyboard_dummy"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans_light"
        android:textColor="@color/black_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_titleWhoPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contentStoryBoard"
        android:text="@string/title_who_played"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_sans_semi_bold"
        android:textColor="@color/black_text"
        android:textSize="16sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_whoPlayed"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        app:layout_constraintTop_toBottomOf="@id/tv_titleWhoPlayed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_selectChair"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_main"
        android:text="@string/button_chair"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/nunito_sans_semi_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>