<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CheckoutActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_baseline_arrow_back_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/title_checkout"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/black_text"
        android:fontFamily="@font/nunito_sans_bold" />

    <TextView
        android:id="@+id/tv_titleFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:text="@string/title_film_dummy"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black_text"
        android:fontFamily="@font/nunito_sans_regular"
        android:textSize="18sp"/>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleFilm"
        app:layout_constraintBottom_toTopOf="@id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_titleWhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_placeTime"
                android:fontFamily="@font/nunito_sans_semi_bold"
                android:textColor="@color/black_text"
                android:textSize="16sp"/>

            <RelativeLayout
                android:id="@+id/rl_placeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_titleWhen"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/tv_titleDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_placeTime"
                    android:fontFamily="@font/nunito_sans_light"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:drawablePadding="12dp"
                    app:drawableStartCompat="@drawable/ic_calendar"
                    android:layout_toStartOf="@id/tv_valueDateTime"/>
                <TextView
                    android:id="@+id/tv_valueDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/dummy_time"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cinema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_placeTime"
                android:layout_marginTop="18dp">
                <TextView
                    android:id="@+id/tv_titleCinema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_cinema"
                    android:fontFamily="@font/nunito_sans_light"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:drawablePadding="12dp"
                    app:drawableStartCompat="@drawable/ic_cinema"
                    android:layout_toStartOf="@id/tv_valueCinema"/>
                <TextView
                    android:id="@+id/tv_valueCinema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/dummy_cinema"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_titleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_cinema"
                android:text="@string/title_kursi"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/nunito_sans_semi_bold"
                android:textColor="@color/black_text"
                android:textSize="16sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rl_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_titleItem"
                android:layout_marginTop="20dp"/>

            <RelativeLayout
                android:id="@+id/rl_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_items"
                android:layout_marginTop="18dp">
                <TextView
                    android:id="@+id/tv_titleTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_total"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_toStartOf="@id/tv_valueTotal"/>
                <TextView
                    android:id="@+id/tv_valueTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/dummy_total"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_titleWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_total"
                android:text="@string/title_wallet"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/nunito_sans_semi_bold"
                android:textColor="@color/black_text"
                android:textSize="16sp"/>

            <RelativeLayout
                android:id="@+id/rl_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_titleWallet"
                android:layout_marginTop="18dp">
                <TextView
                    android:id="@+id/tv_titleBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/title_balance"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_toStartOf="@id/tv_valueBalance"
                    android:drawablePadding="12dp"
                    app:drawableStartCompat="@drawable/ic_wallet_small" />
                <TextView
                    android:id="@+id/tv_valueBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/dummy_total"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_main"
        android:text="@string/button_pay"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/nunito_sans_semi_bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@drawable/shape_rectangle_second"
        android:text="@string/button_cancel"
        android:textColor="@color/black_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/nunito_sans_semi_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>