<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="137dp"
        android:layout_height="79dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="15dp"
        android:layout_marginEnd="16dp">
        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_title_film"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black_text"
            android:layout_toStartOf="@id/tv_rate"
            android:textSize="14sp"
            android:maxLines="1"
            android:layout_marginEnd="4dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_tag_film"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@color/grey_hint"
            android:layout_below="@id/tv_title"
            android:textSize="12sp"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_rate_film"
            android:fontFamily="@font/nunito_sans_regular"
            android:textColor="@color/black_text"
            android:layout_alignParentEnd="true"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_star" />
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_description"
            android:fontFamily="@font/nunito_sans_light"
            android:textColor="@color/black_text"
            android:layout_below="@id/tv_tag"
            android:textSize="12sp"
            android:maxLines="1"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>